# clipveil

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  QA_REPORT.md  README.md  SECURITY.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
samples/: README.md
src/: agent.rs  agent_plan.rs  config.rs  detect.rs  lib.rs  main.rs  paste.rs
tests/: cli.rs  detection.rs
