[package]
name = "clipveil"
version = "0.1.0"
edition = "2021"
description = "A tiny macOS agent that veils secrets in your clipboard before you paste them."
license = "MIT"
repository = "https://github.com/asifur/clipveil"
readme = "README.md"
keywords = ["clipboard", "security", "secrets", "redaction", "macos"]
categories = ["command-line-utilities"]

[[bin]]
name = "clipveil"
path = "src/main.rs"

[dependencies]
regex = "1"
once_cell = "1"

# Clipboard access (used by `scan` and the agent)
arboard = { version = "3", optional = true, default-features = false }

# Agent-only GUI/automation stack
rfd = { version = "0.15", optional = true }
enigo = { version = "0.2", optional = true }
global-hotkey = { version = "0.6", optional = true }
core-foundation = { version = "0.9", optional = true }

[features]
default = ["agent"]
clipboard = ["dep:arboard"]
agent = ["clipboard", "dep:rfd", "dep:enigo", "dep:global-hotkey", "dep:core-foundation"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
