[package]
name = "clipveil"
version = "0.1.0"
edition = "2024"
description = "A tiny macOS agent that veils secrets in your clipboard before you paste them."
license = "MIT"
repository = "https://github.com/ARMeeru/clipveil"
readme = "README.md"
keywords = ["clipboard", "security", "secrets", "redaction", "macos"]
categories = ["command-line-utilities"]

[[bin]]
name = "clipveil"
path = "src/main.rs"

[dependencies]
regex = "1"
once_cell = "1"

# Clipboard access (used by `scan` and the agent)
arboard = { version = "3", optional = true, default-features = false }

# Agent-only GUI/automation stack
rfd = { version = "0.17", optional = true }
enigo = { version = "0.6", optional = true }
global-hotkey = { version = "0.8", optional = true }
objc2 = { version = "0.6", optional = true }
objc2-app-kit = { version = "0.3", optional = true, default-features = false, features = ["std", "NSApplication", "NSPasteboard", "NSResponder", "NSRunningApplication"] }
core-foundation = { version = "0.10", optional = true }

[features]
default = ["agent"]
clipboard = ["dep:arboard"]
agent = ["clipboard", "dep:rfd", "dep:enigo", "dep:global-hotkey", "dep:objc2", "dep:objc2-app-kit", "dep:core-foundation"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
